@@ -1,3 +1,9 @@
+2007-11-22  Paul J Stevens <paul@nfg.nl>
+
+	* check_dbmail_mailbox.c, dbmail-mailbox.c, imapcommands.c, 
+	test-scripts/testimap.py:
+	disallow negative seq-numbers
+
 2007-11-17  Paul J Stevens <paul@nfg.nl>
 
 	* check_dbmail_misc.c, misc.c:
